Google 1.2.0

	* [Feature] Google geocode supports enterprise signing!
	-- Charlie Powell <charlie@eval.bz>  Mon, 30 Sep 2013 00:32:52 -0400

Google 1.1.0

	* Rewrite the Google configuration page to make it more user friendly.
	-- Charlie Powell <charlie@eval.bz>  Sat, 31 Aug 2013 17:34:24 -0400

Google 1.0.1

	* Update the google js code to the newest version available.
	* A few new assets.
	-- Charlie Powell <charlie@eval.bz>  Thu, 01 Aug 2013 00:30:15 -0400

Google 1.0.0

	* Initial build of the Google application.
	* Inlcudes version 1.0.3 of GA.
	-- Charlie Powell <charlie@eval.bz>  Sun, 09 Jun 2013 19:18:24 -0400
